docs(project): capture stale leader red